plugins {
	id 'java'
	id 'eclipse'
	id 'org.springframework.boot' version '3.4.4' apply false
	id 'io.spring.dependency-management' version '1.1.7'
}

// 하위 모든 모듈에서 사용할 spring-boot에 의존성이 없는 dependency에 대한 버전 관리용
ext {
	set('logstashEncoderVersion', '7.4')
	set('jakartaServletApiVersion', '6.0.0')
}

group = 'com.rihee.alerting'
version = '0.0.1-SNAPSHOT'
description = '''\
A centralized Spring Boot multi-module project designed to simulate log collection, event filtering, and asynchronous notifications through Kafka topics.
(MSA 기반 분산 로그 수집 및 경고 알림 시스템)
'''

repositories {
	mavenCentral()
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'eclipse'
	apply plugin: 'io.spring.dependency-management'
	
	if (project.name != 'common') {
        apply plugin: 'org.springframework.boot'
    }
	
	dependencyManagement {
	    imports {
	        mavenBom "org.springframework.boot:spring-boot-dependencies:3.4.4"
	    }
	}
	
	java{
		toolchain {
			languageVersion = JavaLanguageVersion.of(21)
		}
	}
	
	tasks.withType(JavaCompile).configureEach {
	    options.encoding = 'UTF-8'
	}
	
	repositories {
		mavenCentral()
	}

	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter'
		
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	}
	
	tasks.named('test', Test).configure {
		useJUnitPlatform()
		jvmArgs += "-XX:+EnableDynamicAgentLoading"
	}
	
}